# simple-sound-programming

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci-lite.yml  ci.yml  test.yml
audio_lib/: __init__.py  notebook.py  sequencer.py
audio_lib/core/: __init__.py  audio_signal.py  wave_io.py
audio_lib/effects/: __init__.py  audio_effects.py  filters.py
audio_lib/instruments/: __init__.py  basic_instruments.py
audio_lib/synthesis/: __init__.py  envelopes.py  oscillators.py
colab_lessons/: lesson_01_basics_and_sine_waves.ipynb  lesson_02_envelopes_and_adsr.ipynb  lesson_03_filters_and_sound_design.ipynb  lesson_03_frequency_analysis.ipynb  lesson_04_filters_and_sound_design.ipynb  lesson_05_audio_effects_and_dynamics.ipynb  lesson_05_midi_and_sequencer.ipynb  lesson_06_midi_and_sequencer.ipynb  lesson_06_sampling_and_analysis.ipynb  lesson_07_final_project_and_performance.ipynb
docs/: ASSISTANT_CHECKLIST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COLAB_NOTEBOOK_SETUP.md  COLAB_SETUP_GUIDE.md  CONTRIBUTING.md  DESIGN_AUDIO_SIGNAL.md  GITHUB_RELEASE_CHECKLIST.md  GITHUB_SETUP_GUIDE.md  REVIEW_NOTES.md  SECURITY.md  TEST_REPORT.md  api_reference.md
docs/adr/: 0001-introduce-audio-signal.md  0002-livesession-sonic-pi-style-api.md  README.md
examples/: README.md  basic_examples.py  debug_all.py  debug_envelopes.py  debug_instruments.py  debug_oscillators.py  educational_tutorial.py
scripts/: generate_api_docs.py  generate_lesson05.py
tests/: __init__.py  test_audio_lib_comprehensive.py  test_examples.py  test_notebook_scenarios.py  test_oscillators.py
