[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audio_lib"]

[project]
name = "simple-audio-programming"
version = "1.0.0"
description = "音響プログラミング学習用の教育的Pythonライブラリ"
authors = [{name = "Simple Audio Programming Team", email = "gen@ggszk.org"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ggszk/simple-audio-programming"
Repository = "https://github.com/ggszk/simple-audio-programming.git"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 127
target-version = "py38"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["W291", "W293", "E402", "E231"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
]

markers = [
    "slow: 実行時間の長いテスト",
    "integration: 統合テスト",
    "unit: 単体テスト",
    "lesson1: Lesson 1関連のテスト",
    "lesson2: Lesson 2関連のテスト", 
    "lesson3: Lesson 3関連のテスト",
    "lesson4: Lesson 4関連のテスト",
    "audio: 音声処理関連のテスト",
    "effects: エフェクト関連のテスト",
    "oscillators: オシレーター関連のテスト",
    "envelopes: エンベロープ関連のテスト",
]

filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
